--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+body{
+    font-family: 'Open Sans', sans-serif;
 }
 .abc{
     z-index: 1;
     position: relative;
 }
+/* ---------------HEADER--------------- */
 .Header{
     height: 45rem;
     
@@ -44,7 +49,7 @@
 }
 .Header h1{
     color: white;
-    padding-top: 200px;
+    padding-top: 240px;
     padding-bottom: 0;
     font-size: 55px;
     
@@ -75,4 +80,54 @@
 }
 .input-group-append{
     margin: auto 0;
+}
+
+/* ---------------Features--------------- */
+
+.features{
+    padding: 100px 0;
+
+}
+h1{
+    text-align: center;
+    padding-bottom: 30px;
+}
+.feature-img img{
+    width: 100%;
+}
+.price{
+    width: 50px;
+    height: 50px;
+    background: #ff5722;
+    color: white;
+    font-weight: 600;
+    border-radius: 50%;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(37,73,214,0.18);
+    position: absolute;
+    left: 20px;
+    bottom: -25px;
+}
+.feature-img{
+    position: relative;
+}
+.rating{
+    padding: 3px;
+    float: right;
+    background: white;
+    bottom: -1px;
+    right: 0;
+    position:absolute;
+}
+.features .fa{
+    font-size: 15px;
+    color: #ff5722;
+}
+.feature-details{
+    padding: 20px;
+    text-align: justify;
+}
+.feature-details h4{
+    margin-top: 20px;
+    font-weight: 600;
 }
