--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
 /* ---------------HEADER--------------- */
 .Header{
     height: 45rem;
-    
     background-image: url("Images/banner1.jpg");
     background-size: cover;
     background-position: center;
@@ -34,8 +33,9 @@ body{
 
 }
 .Header img{
-    width: 180px;
+    width: 60px;
     float: left;
+    margin-left: -20px;
 }
 .login-btn{
     width: 100px;
@@ -130,4 +130,51 @@ h1{
 .feature-details h4{
     margin-top: 20px;
     font-weight: 600;
+}
+.feature-details p{
+    font-size: 12px;
+}
+.feature-details fa{
+    margin-right: 5px;
+}
+.feature-box{
+    box-shadow: 0 0 10px 5px rgba(37,73,214,0.18);
+}
+
+
+/* ---------------Gallery--------------- */
+.gallery{
+    padding: 70px 0;
+    background-color:#DCDCDC;
+}
+.gallery h1{
+    padding-bottom: 50px;
+}
+
+.gallery-box img{
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.8s;
+}
+.gallery-box img:hover{
+    transform: scale(1.1);
+}
+.gallery-box h4{
+    padding-top: 12px;
+    text-align: center;
+    text-shadow: -2px 2px 2px rgb(191, 255, 0);
+}
+.gallery-box{
+    position:relative;
+    margin-bottom: 30px;
+}
+
+/* ---------------Banner--------------- */
+.banner{
+    height: 80%;
+    background-image: url("/Images/banner2.jpg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
