--- a/style.css
+++ b/style.css
@@ -172,9 +172,41 @@ h1{
 
 /* ---------------Banner--------------- */
 .banner{
-    height: 80%;
+    height: 45rem;
     background-image: url("/Images/banner2.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    padding-top: 14%;
+}
+.banner-highlights{
+
+    padding: 70px 0;
+    background:rgb(0,0,0,0.7);
+    text-align: center;
+    color: #fff;
+}
+.booking-btn{
+    width: 120px;
+    padding: 8px 0;
+    outline: none !important;
+    border: 2px solid white;
+    border-radius: 50px;
+    background: transparent;
+    color: white;
+    margin-top: 20px;
+}
+
+/* ---------------User Review--------------- */
+.users-feedback{
+    padding: 70px;
+}
+.user-review{
+    text-align: center;
+    box-shadow: 0 0 10px 1px rgba(0,0,100,0.2);
+    padding-bottom: 50px;
+}
+.user-review p{
+    padding: 50px 10px 10px 10px;
+
 }
