--- a/style.css
+++ b/style.css
@@ -71,9 +71,9 @@ body{
 }
 .input-group-text{
     width: 100px;
-    background-image: linear-gradient(#00ff7e,#1f3d90);
+    background-image: linear-gradient(#FF9933,white,#138808);
     border: 0 !important;
-    color: white !important;
+    color: #000080 !important;
     padding: 0 25px !important;
     border-radius: 30px !important;
     box-shadow: none !important;
