--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@ h1{
     width: 100%;
 }
 .price{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     background: #ff5722;
     color: white;
     font-weight: 600;
@@ -107,6 +107,9 @@ h1{
     position: absolute;
     left: 20px;
     bottom: -25px;
+}
+.price p{
+    padding-top: 7px;
 }
 .feature-img{
     position: relative;
@@ -209,4 +212,21 @@ h1{
 .user-review p{
     padding: 50px 10px 10px 10px;
 
+}
+.users-feedback img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    position: relative;
+    margin: -30px 0 20px 44%;
+}
+.user-review p::before{
+    content: '\201d';
+    display: block;
+    position: absolute;
+    font-size: 100px;
+    color:cornflowerblue;
+    font-family: sans-serif;
+    left: 44%;
+    top: -20px;
 }
