--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body{
     
 }
 .input-group{
-    width: 90%;
+    width: 90% !important;
     max-width: 500px;
     border-radius: 30px;
     background: white;
@@ -126,6 +126,10 @@ h1{
     font-size: 15px;
     color: #ff5722;
 }
+.features .bi{
+    font-size: 15px;
+    color: #ff5722;
+}
 .feature-details{
     padding: 20px;
     text-align: justify;
@@ -137,7 +141,7 @@ h1{
 .feature-details p{
     font-size: 12px;
 }
-.feature-details fa{
+.feature-details .fa{
     margin-right: 5px;
 }
 .feature-box{
@@ -221,3 +225,41 @@ h1{
     margin: -30px 0 20px 44%;
 }
 
+/* ---------------Footer--------------- */
+.footer{
+    padding: 100px 20px 15px;
+    background-image: linear-gradient(#2d557d,#9610fb);
+    color: white;
+}
+.footer-logo{
+    width: 70px;
+    height: 70px;
+    margin: 15px 0;
+}
+.footer h4{
+    text-align: left;
+    margin-top: 15px;
+    margin-bottom: 25px;
+}
+.footer p{
+    font-size: 14px;
+    text-align: justify;
+    padding-right: 35px;
+    text-indent: 5px;
+}
+.footer .row .bi{
+    font-size: 15px;
+    padding-right: 5px;
+}
+.footer hr{
+    background-color: #efefef;
+    margin-top: 10px;
+}
+.footer .copyright{
+    padding-top: 15px;
+    text-align: center;
+}
+.bi-suit-heart-fill{
+    margin: 0 5px;
+    color: #ff5722;
+}
